--- a/python-basics.ipynb
+++ b/python-basics.ipynb
@@ -10,18 +10,105 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating variables\n",
+    "Here, we show how to create basic variables like integers, floating-point numbers, and strings.\n",
+    "\n",
+    "In Python, you don't need to explicitly state your variable type like you do in some other languages like Java or C++."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note that this is a comment ^.^ just so you know\n",
+    "var_a = 1\n",
+    "var_b = -1.5\n",
+    "my_text = \"TheraPy Session\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Printing\n",
+    "Here, we show how to do the most basic way to print to console."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, TheraPy Session viewers!\n",
+      "1\n",
+      "-1.5\n",
+      "TheraPy Session\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, TheraPy Session viewers!\")\n",
+    "print(var_a)\n",
+    "print(var_b)\n",
+    "print(my_text)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Arithmetic\n",
+    "Now, let's get into some basic arithmetic examples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_a = 5\n",
+    "num_b = 3\n",
+    "num_c = -2.5"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.1"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "570feb405e2e27c949193ac68f46852414290d515b0ba6e5d90d076ed2284471"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
