Added basic arithmetic to notebook

--- a/python-basics.ipynb
+++ b/python-basics.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -75,13 +75,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Declare some variables for us to use\n",
     "num_a = 5\n",
     "num_b = 3\n",
     "num_c = -2.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "0.5\n",
+      "-2.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Addition\n",
+    "add_a = num_a + num_b # Add two integers together\n",
+    "add_b = num_b + num_c # Add an integer and a floating-point number\n",
+    "add_c = num_c + 0.25  # Add a fixed value to a variable\n",
+    "\n",
+    "print(add_a)\n",
+    "print(add_b)\n",
+    "print(add_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5.5\n",
+      "-3.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Subtraction\n",
+    "sub_a = num_a - num_b\n",
+    "sub_b = num_b - num_c\n",
+    "sub_c = num_c - 0.75\n",
+    "\n",
+    "print(sub_a)\n",
+    "print(sub_b)\n",
+    "print(sub_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "-7.5\n",
+      "-6.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiplication\n",
+    "mul_a = num_a * num_b\n",
+    "mul_b = num_b * num_c\n",
+    "mul_c = num_c * 2.5\n",
+    "\n",
+    "print(mul_a)\n",
+    "print(mul_b)\n",
+    "print(mul_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6666666666666667\n",
+      "-1.2\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \"Regular\" Division\n",
+    "div_a = num_a / num_b\n",
+    "div_b = num_b / num_c\n",
+    "div_c = num_c / -0.5\n",
+    "\n",
+    "print(div_a)\n",
+    "print(div_b)\n",
+    "print(div_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Integer\" part of division\n",
+      "6\n",
+      "7.0\n",
+      "Remainder of division\n",
+      "1\n",
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Integer Division and Modulo\n",
+    "int_a = 25\n",
+    "int_b = 4\n",
+    "\n",
+    "idiv_a = int_a // int_b\n",
+    "idiv_b = int_a // 3.5\n",
+    "\n",
+    "print(\"\\\"Integer\\\" part of division\")\n",
+    "print(idiv_a)\n",
+    "print(idiv_b)\n",
+    "\n",
+    "mod_a = int_a % int_b\n",
+    "mod_b = int_a % 3.5\n",
+    "\n",
+    "print(\"Remainder of division\")\n",
+    "print(mod_a)\n",
+    "print(mod_b)"
    ]
   }
  ],
