Added some more cases to basic arithmetic

--- a/Vanilla Python/1_Variables_and_Basic_Arithmetic.ipynb
+++ b/Vanilla Python/1_Variables_and_Basic_Arithmetic.ipynb
@@ -96,19 +96,22 @@
      "text": [
       "8\n",
       "0.5\n",
-      "-2.25\n"
+      "-2.25\n",
+      "3.75\n"
      ]
     }
    ],
    "source": [
     "# Addition\n",
-    "add_a = num_a + num_b # Add two integers together\n",
-    "add_b = num_b + num_c # Add an integer and a floating-point number\n",
-    "add_c = num_c + 0.25  # Add a fixed value to a variable\n",
+    "add_a = num_a + num_b        # Add two integers together\n",
+    "add_b = num_b + num_c        # Add an integer and a floating-point number\n",
+    "add_c = num_c + 0.25         # Add a fixed value to a variable\n",
+    "add_d = 1.25 + num_a + num_c # Add several values together\n",
     "\n",
     "print(add_a)\n",
     "print(add_b)\n",
-    "print(add_c)"
+    "print(add_c)\n",
+    "print(add_d)"
    ]
   },
   {
@@ -122,19 +125,28 @@
      "text": [
       "2\n",
       "5.5\n",
-      "-3.25\n"
+      "-3.25\n",
+      "3.25\n",
+      "-1.75\n",
+      "6.25\n"
      ]
     }
    ],
    "source": [
     "# Subtraction\n",
-    "sub_a = num_a - num_b\n",
-    "sub_b = num_b - num_c\n",
-    "sub_c = num_c - 0.75\n",
+    "sub_a = num_a - num_b          # Subtract two integers\n",
+    "sub_b = num_b - num_c          # Subtract a floating-point number from an integer\n",
+    "sub_c = num_c - 0.75           # Subtract a fixed variable from a variable\n",
+    "sub_d = num_a - 4.25 - num_c   # Subtract several values\n",
+    "sub_e = num_a - (4.25 - num_c) # Specify order with parentheses\n",
+    "sub_f = num_a + 4.25 - num_b   # Mix operations\n",
     "\n",
     "print(sub_a)\n",
     "print(sub_b)\n",
-    "print(sub_c)"
+    "print(sub_c)\n",
+    "print(sub_d)\n",
+    "print(sub_e)\n",
+    "print(sub_f)"
    ]
   },
   {
@@ -154,9 +166,9 @@
    ],
    "source": [
     "# Multiplication\n",
-    "mul_a = num_a * num_b\n",
-    "mul_b = num_b * num_c\n",
-    "mul_c = num_c * 2.5\n",
+    "mul_a = num_a * num_b # Multiply two integers\n",
+    "mul_b = num_b * num_c # Multiply an integer and a floating-point number\n",
+    "mul_c = num_c * 2.5   # Multiply by a fixed value\n",
     "\n",
     "print(mul_a)\n",
     "print(mul_b)\n",
@@ -172,21 +184,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2.0\n",
       "1.6666666666666667\n",
       "-1.2\n",
-      "5.0\n"
+      "1.6666666666666667\n"
      ]
     }
    ],
    "source": [
     "# \"Regular\" Division\n",
-    "div_a = num_a / num_b\n",
-    "div_b = num_b / num_c\n",
-    "div_c = num_c / -0.5\n",
+    "div_a = 10 / 5        # Divide two integers that result in an integer\n",
+    "div_b = num_a / num_b # Divide two integers that result in a fraction\n",
+    "div_c = num_b / num_c # Divide an integer and a fraction\n",
+    "div_d = num_c / -0.5  # Divide by a fixed value\n",
     "\n",
     "print(div_a)\n",
     "print(div_b)\n",
-    "print(div_c)"
+    "print(div_c)\n",
+    "print(div_d)"
    ]
   },
   {
@@ -203,7 +218,10 @@
       "7.0\n",
       "Remainder of division\n",
       "1\n",
-      "0.5\n"
+      "0.5\n",
+      "-1\n",
+      "1\n",
+      "-1\n"
      ]
     }
    ],
@@ -212,19 +230,25 @@
     "int_a = 25\n",
     "int_b = 4\n",
     "\n",
-    "idiv_a = int_a // int_b\n",
-    "idiv_b = int_a // 3.5\n",
+    "idiv_a = int_a // int_b # Integer division of two integers\n",
+    "idiv_b = int_a // 3.5   # Integer division with a floating-point value\n",
     "\n",
     "print(\"\\\"Integer\\\" part of division\")\n",
     "print(idiv_a)\n",
     "print(idiv_b)\n",
     "\n",
-    "mod_a = int_a % int_b\n",
-    "mod_b = int_a % 3.5\n",
+    "mod_a = int_a % int_b # Modulo (remainder) with two integers\n",
+    "mod_b = int_a % 3.5   # Modulo (remainder) with a floating point value\n",
+    "mod_c = 3 % -2        # Modulo (remainder) with a negative in second position\n",
+    "mod_d = -3 % 2        # Modulo (remainder) with a negative in first position\n",
+    "mod_e = -3 % -2       # Modulo (remainder) with a negative in both positions\n",
     "\n",
     "print(\"Remainder of division\")\n",
     "print(mod_a)\n",
-    "print(mod_b)"
+    "print(mod_b)\n",
+    "print(mod_c)\n",
+    "print(mod_d)\n",
+    "print(mod_e)"
    ]
   }
  ],
