Fixed Heading of notebook

--- a/Vanilla Python/1_Variables_and_Basic_Arithmetic.ipynb
+++ b/Vanilla Python/1_Variables_and_Basic_Arithmetic.ipynb
@@ -5,8 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Basics\n",
-    "This notebook will have some syntax examples for vanilla Python"
+    "# Variables, Basic Printing, and Basic Arithmetic\n",
+    "This notebook will have some syntax examples for vanilla Python covering declaring variables, the basics of printing, and basic arithmetic operations"
    ]
   },
   {
@@ -187,7 +187,7 @@
       "2.0\n",
       "1.6666666666666667\n",
       "-1.2\n",
-      "1.6666666666666667\n"
+      "5.0\n"
      ]
     }
    ],
